[project]
name = "AutomationHandler_ramcik"
version = "0.0.17"
authors = [
  { name="Ramis", email="ramis155r@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ramisaciksoz/ramcikLib"
Issues = "https://github.com/ramisaciksoz/ramcikLib/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

